...
<resources>
  <string name="about_text_450">About %s</string>
  <string name="agree_button_title_50">Agree</string>
  <string name="alert_connection_error_title_1139">Connection Error</string>
  <string name="alert_error_message_269">An unknown error occurred.</string>
...
  <string name="back_button_336">Back</string>
  <string name="bpm_unit_of_measure_9992">bpm</string>
  <string name="cancel_button_title_24">Cancel</string>
  <string name="capture_results.blood_glucose_message_154">Points are only awarded for either random or fasting glucose, not both.</string>
  <string name="capture_results.body_mass_index_alert_message_162">To earn points for your body mass index you need to capture both your height and weight measurements. Do you want to continue without capturing this?</string>
...
  <string name="confirmation.completed_title_117">Completed!</string>
  <string name="confirmation.completed_title_351">Completed!</string>
  <string name="confirm_title_button_182">Confirm</string>
  <string name="connectivity_error_alert_message_45">A connection error has occurred. Please make sure that you are connected to a wi-fi or cellular network and try again.</string>
  <string name="connectivity_error_alert_title_44">Connectivity error</string>
  <string name="continue_button_title_87">Continue</string>
  <string name="control_health_app_data_message_463">Control your health data from the Health app.</string>
  <string name="data_and_privacy_policy_title_123">Data and Privacy Policy</string>
  <string name="date_title_264">Date</string>
  <!-- //////////////////////////////////////////////////// Declare Strings //////////////////////////////////////////////////// -->
...
  <string name="generic_unkown_error_title_266">Unkown error</string>
  <string name="get_started_button_title_103">Get Started</string>
  <string name="great_button_title_120">Great!</string>
  <string name="having_trouble_button_text_461">Having Trouble?</string>
  <string name="HealthPartners.screen_title_897">Health Partners</string>
...
  <string name="my_health.what_you_havent_provided_1175">What you haven\’t provided</string>
  <string name="my_health._learn_more_good_content_757">Way to go! Your Vitality Age is %s years lower than your actual age. This means you\'re at a lower risk of heart disease and other cardiovascular diseases.\n\nKeep your VHC up to date to maintain the most accurate Vitality Age.</string>
  <string name="next_button_title_84">Next</string>
  <string name="notification.healthapp_syncing_reminder_9999">Remember to sync your Health activity before your goal cycle ends.</string>
  <!-- //////////////////////////////////////////////////// Notifications //////////////////////////////////////////////////// -->
...
  <string name="NSD.partner_detail_message_1046">Get up to 80%% discount on standard rates from our participating partners.</string>
  <string name="NSD.partner_detail_title_1045">Join a Partner</string>
  <string name="ok_button_title_40">Ok</string>
  <string name="onboarding.enjoy_weekly_rewards_description_17">Achieve your weekly targets with Active Rewards and earn great rewards from our partners.</string>
  <string name="onboarding.enjoy_weekly_rewards_title_16">ENJOY WEEKLY REWARDS</string>
...
  <string name="terms_and_conditions.screen_title_94">Terms and Conditions</string>
  <string name="true_title_361">True</string>
  <string name="try_again_button_title_43">Try again</string>
  <string name="UKE.Activate.activate_title_353">Activate</string>
  <string name="UKE.activate.authentication_code_355">Authentication Code</string>
...
