...
    <RelativeLayout
        android:id="@+id/register_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/register_button_bar"
            android:background="@android:color/white"
            android:divider="@null"
            android:dividerHeight="0dp"
...
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/loginBackgroundDisabled"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
...
