...
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:textColor="@color/light_primary_38"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/field"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:drawablePadding="16dp"
...
